--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -6,7 +6,10 @@
 $colors: (
 
     primary: (
-        pink            : #F42D8C
+        aqua            : #009A92,
+        gold            : #FFD400,
+        steel           : #45525A,
+        brown           : #878E7B
     ),
 
     neutral: (
@@ -49,13 +52,13 @@ $colors: (
  * Font
  */
 
-$font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$font-family            : "Muli", -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 
 $font-size              : 90%;
 $font-size-sm           : 0.85em;
 $font-size-lg           : 1.2em;
 
-$bold                   : 600;
+$bold                   : 900;
 
 $line-height            : 1.6;
 $line-height-sm         : 1.2;
