--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -5,16 +5,17 @@
 
 $colors: (
 
-    primary: (
+    brand: (
         aqua            : #009A92,
         gold            : #FFD400,
         steel           : #45525A,
-        brown           : #878E7B
+        brown           : #878E7B,
+        sky             : #C2E6F9
     ),
 
     neutral: (
-        black         : #000,
-        white         : #fff,
+        black           : #000,
+        white           : #fff,
         darkest         : #222,
         darker          : #444,
         dark            : #666,
@@ -52,7 +53,7 @@ $colors: (
  * Font
  */
 
-$font-family            : "Muli", -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+$font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 
 $font-size              : 90%;
 $font-size-sm           : 0.85em;
@@ -69,7 +70,7 @@ $line-height-sm         : 1.2;
  * Calculated from type scales http://type-scale.com/
  */
 
-$heading-font-family    : $font-family;
+$heading-font-family    : "Muli", "Arial Black";
 
 $typescale: (
     min                 : 1.125,
