--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -25,7 +25,7 @@ textarea,
 select[multiple=multiple] {
     background-color: color(neutral, white);
     border: 1px solid color(neutral, dark);
-    border-radius: 0;
+    border-radius: $border-radius;
     padding: spacing(xs) spacing(sm);
     width: 100%;
     color: color(neutral, dark);
