--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -5,7 +5,7 @@
 .btn,
 %btn {
     padding: spacing(xs) spacing();
-    border-radius: 0;
+    border-radius: $border-radius;
     font-size: inherit;
     font-family: inherit;
     font-weight: $bold;
