--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -20,7 +20,7 @@
 %nav--pills {
     a {
         display: block;
-        padding: spacing(xs) spacing(sm);
+        padding: spacing(xs) 0;
     }
 }
 
@@ -58,43 +58,13 @@
 
 
 /**
- * Nav Multi Level
+ * Nav Branded
  */
 
-.nav--multi-level,
-%nav--multi-level {
-    li {
-        position: relative;
-    }
-
-    // All levels
-    ul,
-    ol {
-        @extend %nav;
-        display: none;
-        position: absolute;
-    }
-
-    // Just Level 0
-    > ul,
-    > ol {
-        top: 100%;
-    }
-
-    ul ul,
-    ol ol,
-    ul ol,
-    ol ul {
-        top: 0;
-        left: 100%;
-    }
-
-    li:hover > ul,
-    li:hover > ol {
-        display: block;
-    }
-
-    a {
-        white-space: nowrap;
-    }
+.nav--branded,
+%nav--branded {
+    @extend %nav;
+    @extend %nav--pills;
+    @extend %u-text-uppercase;
+    font-weight: $bold;
 }
