New direction with header, feels better.

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -78,6 +78,14 @@ $typescale: (
 );
 
 
+// =============================================
+// Hero heading
+// =============================================
+
+$hero-heading-min: 2em;
+$hero-heading-max: 4.5em;
+
+
 /**
  * Z indexing
  */
