--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -97,3 +97,4 @@
 @import "component/toggle-icon";
 @import "component/responsive-table";
 @import "component/header";
+@import "component/hero-heading";
