--- a/src/scss/component/_header.scss
+++ b/src/scss/component/_header.scss
@@ -2,15 +2,16 @@
     position: fixed;
     top: 0;
     left: 0;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    
     overflow: hidden;
     padding: spacing();
     background-color: color(neutral, white);
     transition: height 350ms cubic-bezier(0.23, 1, 0.32, 1);
-    
-    @include breakpoint(max-width screen(sm, max)) {
-        width: 100%;
+
+    @include breakpoint(max-width screen(xs, max)) {
+        flex-direction: column;
         height: 7em;
         &.is-active {
             height: 100%;
@@ -21,14 +22,14 @@
             }
         }
     }
+    
+//    @include breakpoint(screen(sm)) {
+//        width: 120px;
+//        height: 100%;
+//    }
 }
 
-.header__header,
-.header__footer {
-    flex: 1;
-}
-
-@include breakpoint(max-width screen(sm, max)) {
+@include breakpoint(max-width screen(xs, max)) {
     .header__body,
     .header__footer {
         opacity: 0;
@@ -40,14 +41,34 @@
 .header__body {
     @include flex;
     @include align-items(center);
-    flex-grow: 2;
+    flex-grow: 1;
 }
 .header__logo {
     display: block;
-    width: 60px;
-    float: left;
+//    @include breakpoint(max-width screen(xs, max)) {
+        width: 60px;
+        float: left;
+//    }
 }
 
 .header__link-menu {
+    @extend %u-text-branded;
+    text-decoration: none;
     float: right;
+    &:hover {
+        color: color(brand, aqua);
+    }
+    &:active {
+        color: color(brand, steel);
+    }
+    &.is-active {
+        @extend %u-throb;
+    }
+}
+
+.header__nav {
+    float: right;
+    li {
+        display: inline-block;
+    }
 }
