--- a/src/scss/component/_nav.scss
+++ b/src/scss/component/_nav.scss
@@ -67,4 +67,7 @@
     @extend %nav--pills;
     @extend %u-text-uppercase;
     font-weight: $bold;
+    a:hover {
+        color: color(brand, aqua);
+    }
 }
