Add max width util and content.

--- a/src/scss/_setting.scss
+++ b/src/scss/_setting.scss
@@ -85,6 +85,10 @@ $sections: (
     lg: (
         min            : 4em,
         max            : 8em
+    ),
+    xl: (
+        min            : 5em,
+        max            : 14em
     )
 );
 
