--- a/src/scss/base/_horizontal-rule.scss
+++ b/src/scss/base/_horizontal-rule.scss
@@ -4,8 +4,8 @@
 
 hr {
     border: 0;
-    height: 1px;
-    background-color: color(neutral, light);
-    margin-top: spacing(xl);
-    margin-bottom: spacing(xl);
+    height: 5px;
+    background-color: color(brand, sky);
+    margin-top: spacing(xl) * 2;
+    margin-bottom: spacing(xl) * 2;
 }
