--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -20,8 +20,8 @@ $colors: (
         darker          : #444,
         dark            : #666,
         light           : #999,
-        lighter         : #ccc,
-        lightest        : #f4f4f4
+        lighter         : #eee,
+        lightest        : #f9f9f9
     ),
 
     contextual: (
