--- a/src/scss/base/_html.scss
+++ b/src/scss/base/_html.scss
@@ -12,13 +12,13 @@ html {
 }
 
 html {
-    background-color: color(neutral, lightest);
-}
-
-body {
     background-color: color(neutral, white);
 }
 
-.cc-mode-preview {
-    padding-top: 100px;
+body {
+    background-color: color(neutral, lightest);
 }
+
+//.cc-mode-preview {
+//    padding-top: 80px;
+//}
