--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -99,3 +99,11 @@
 @import "component/responsive-table";
 @import "component/header";
 @import "component/hero-heading";
+@import "component/token";
+
+
+/**
+ * Theme
+ */
+
+@import "theme/steel";
