Added new logo, styled hr, styled footer.

--- a/src/scss/component/_hero-heading.scss
+++ b/src/scss/component/_hero-heading.scss
@@ -1,6 +1,6 @@
-// =============================================
-// Hero Heading
-// =============================================
+/**
+ * Hero Heading
+ */
 
 .hero-heading {
     @extend %h1;
