--- a/src/scss/base/_horizontal-rule.scss
+++ b/src/scss/base/_horizontal-rule.scss
@@ -5,7 +5,11 @@
 hr {
     border: 0;
     height: 5px;
-    background-color: color(brand, sky);
+    background-color: color(brand, steel);
     margin-top: spacing(xl) * 2;
     margin-bottom: spacing(xl) * 2;
+    box-shadow:
+        inset -5em 0px 0px 0px color(brand, sky),
+        inset -10em 0px 0px 0px color(brand, gold),
+        inset -15em 0px 0px 0px color(brand, aqua);
 }
