--- a/src/scss/utility/_animate.scss
+++ b/src/scss/utility/_animate.scss
@@ -9,10 +9,11 @@
     animation: spin 0.3s infinite linear;
 }
 
-.u-throb,
-%u-throb {
-    animation: throb 3s infinite ease-in-out;
+.u-whirr,
+%u-whirr {
+    animation: whirr 4s ease-in-out;
 }
+
 
 @keyframes spin {
     from {
@@ -27,10 +28,4 @@
     0% { transform: rotate(0deg); }
     20% { transform: rotate(360deg); }
     100% { transform: rotate(360deg); }
-}
-
-@keyframes throb {
-    0% { opacity: 1; }
-    20% { opacity: 0.5; }
-    100% { opacity: 1; }
 }
