Fleshing out the homepage.

--- a/src/scss/_setting.scss
+++ b/src/scss/_setting.scss
@@ -71,9 +71,9 @@ $containers: (
  */
 
 $gutters: (
-    base                : 1em,
-    sm                  : 0.5em,
-    lg                  : 2%
+    base                : 2em,
+    sm                  : 1em,
+    lg                  : 4em
 );
 
 
