--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -27,6 +27,11 @@
         margin-top: -2px;
         margin-bottom: -2px;
     }
+    
+    &:focus {
+        box-shadow: 0 0 5px 0 rgba(color(neutral, black),.3);
+        outline: none;
+    }
 }
 
 
