Progress on homepage, added steps and icons.

--- a/src/scss/base/_icon.scss
+++ b/src/scss/base/_icon.scss
@@ -32,6 +32,27 @@
 
 
 /**
+ * Icon XLarge
+ */
+
+.icon--xl,
+%icon--xl {
+    height: spacing(lg) * 5;
+    width: spacing(lg) * 5;
+}
+
+
+/**
+ * Icon Circle
+ */
+
+.icon--circle,
+%icon--circle {
+    border-radius: 100%;
+}
+
+
+/**
  * Icon Card
  */
 
