--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -101,6 +101,7 @@
 @import "component/hero-heading";
 @import "component/token";
 @import "component/logo";
+@import "component/step-icon";
 
 
 /**
