--- a/src/scss/base/_horizontal-rule.scss
+++ b/src/scss/base/_horizontal-rule.scss
@@ -5,9 +5,14 @@
 hr {
     border: 0;
     height: 5px;
-    background-color: color(brand, steel);
+    background-color: color(neutral, white);
     margin-top: spacing(xl) * 2;
     margin-bottom: spacing(xl) * 2;
+    
+}
+
+.striped {
+    background-color: color(brand, steel);
     box-shadow:
         inset -5em 0px 0px 0px color(brand, sky),
         inset -10em 0px 0px 0px color(brand, gold),
