--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -56,6 +56,7 @@ $colors: (
 $font-family            : -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
 
 $font-size              : 90%;
+$font-size-xs           : 0.6em;
 $font-size-sm           : 0.85em;
 $font-size-lg           : 1.2em;
 
