--- a/src/scss/component/_header.scss
+++ b/src/scss/component/_header.scss
@@ -20,11 +20,6 @@ $header-height: 5.6em;
     overflow: hidden;
     background-color: color(neutral, white);
     transition: height 350ms cubic-bezier(0.23, 1, 0.32, 1);
-
-    @include breakpoint(max-width screen(sm, max)) {
-        flex-direction: column;
-        height: $header-height;
-    }
     
     @include breakpoint(screen(md)) {
         padding-left: spacing();
@@ -37,17 +32,7 @@ $header-height: 5.6em;
  * Header State
  */
 
-.header.is-active {
-    @include breakpoint(max-width screen(sm, max)) {
-        height: 100%;
-        background-color: rgba(255,255,255,0.95);
-        .header__body,
-        .header__footer {
-            opacity: 1;
-            visibility: visible;
-        }
-    }
-}
+.header.is-active {}
 
 
 /**
@@ -55,23 +40,8 @@ $header-height: 5.6em;
  */
 
 .header__header,
-.header__body,
-.header__footer {
+.header__body {
     padding: spacing();
-}
-
-.header__body,
-.header__footer {
-    width: 100%;
-}
-
-@include breakpoint(max-width screen(sm, max)) {
-    .header__body,
-    .header__footer {
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 350ms cubic-bezier(0.23, 1, 0.32, 1);
-    }
 }
 
 
@@ -79,14 +49,7 @@ $header-height: 5.6em;
  * Header Header
  */
 
-.header__header {
-    @include breakpoint(max-width screen(sm, max)) {
-        @include flex;
-        @include align-items(center);
-        @include justify-content(space-between);
-        width: 100%;
-    }
-}
+.header__header {}
 
 
 /**
@@ -97,14 +60,11 @@ $header-height: 5.6em;
     @include flex;
     @include align-items(center);
     flex-grow: 1;
+    width: 100%;
+    @include breakpoint(max-width screen(xs, max)) {
+        padding-left: 0;
+    }
 }
-
-
-/**
- * Header Footer
- */
-
-.header__footer {}
 
 
 /**
@@ -112,25 +72,25 @@ $header-height: 5.6em;
  */
 
 .header__nav {
-    @include breakpoint(max-width screen(sm, max)) {
-        font-size: 170%;
-    }
-    
-    @include breakpoint(screen(md)) {
-        width: 100%;
-        .nav {
-            @include flex;
-            flex-grow: 1;
-            li {
-                margin-left: spacing();
-            }
-            > *:first-child {
-                margin-left: auto;
-            }
-            > *:last-child {
-                margin-left: auto;
-            }
+    width: 100%;
+    .nav {
+        @include flex;
+        flex-grow: 1;
+        li {
+            margin-left: spacing();
         }
+        > *:first-child {
+            margin-left: auto;
+        }
+        > *:last-child {
+            margin-left: auto;
+        }
+    }
+    @include breakpoint(max-width screen(xs, max)) {
+        font-size: 80%;
+    }
+    @include breakpoint(screen(lg)) {
+        font-size: 130%;
     }
 }
 
@@ -142,18 +102,7 @@ $header-height: 5.6em;
 .header__logo {
     display: block;
     width: 130px;
-}
-
-
-/**
- * Header Menu Link
- */
-
-.header__link-menu {
-    @extend %u-text-branded;
-    float: right;
-    
-    @include breakpoint(max-width screen(sm, max)) {
-        font-size: 120%;
+    @include breakpoint(max-width screen(xs, max)) {
+        max-width: 90px;
     }
 }
