Fix logo for Chrome, add flush list util.

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -25,11 +25,11 @@ $colors: (
     ),
 
     contextual: (
-        success         : #4caf50,
-        success-light   : #c8e6c9,
+        success         : #8ac561,
+        success-light   : #c0e0aa,
         warning         : #ffeb3b,
         warning-light   : #fff59d,
-        error           : #f44336,
+        error           : #f03112,
         error-light     : #ffcdd2,
         info            : #4b68b3,
         info-light      : #e5eef9
