--- a/src/scss/component/_logo.scss
+++ b/src/scss/component/_logo.scss
@@ -13,17 +13,36 @@
     &__logo {
         margin-right: spacing(sm);
     }
+	
+	svg {
+		width: 100%;
+	}
+	
+    @include breakpoint(max-width screen(xs, max)) {
+        &__logo {
+            width: 35px;
+			height: 35px;
+			margin-right: 5px;
+        }
     
+        &__text {
+            width: 35px;
+			height: 12px;
+        }
+	}
+	
     @include breakpoint(screen(sm)) {
         > * {
             flex-shrink: 0;
         }
         &__logo {
             width: 50px;
+			height: 50px;
         }
     
         &__text {
             width: 60px;
+			height: 20px;
         }
     }
 }
