--- a/src/scss/theme/_aqua.scss
+++ b/src/scss/theme/_aqua.scss
@@ -1,10 +1,10 @@
 /**
- * Theme Steel
+ * Theme Aqua
  */
 
-.t-steel,
-%t-steel {
-    @extend %u-fill-brand-steel;
+.t-aqua,
+%t-aqua {
+    @extend %u-fill-brand-aqua;
     
     &,
     a:not(.btn) {
