--- a/src/scss/component/_header.scss
+++ b/src/scss/component/_header.scss
@@ -2,7 +2,7 @@
  * Header
  * offset the fixed header
  */
-$header-height: 5.6em;
+$header-height: 65px;
 
 [role="main"] {
     padding-top: $header-height;
@@ -17,7 +17,6 @@ $header-height: 5.6em;
     @include flex;
     @include align-items(center);
     z-index: $z-9;
-    overflow: hidden;
     background-color: color(neutral, white);
     transition: height 350ms cubic-bezier(0.23, 1, 0.32, 1);
     
@@ -76,8 +75,11 @@ $header-height: 5.6em;
     .nav {
         @include flex;
         flex-grow: 1;
-        li {
+        > li {
             margin-left: spacing();
+            > a:hover {
+                color: color(brand, aqua);
+            }
         }
         > *:first-child {
             margin-left: auto;
