--- a/src/scss/component/_modal.scss
+++ b/src/scss/component/_modal.scss
@@ -11,11 +11,17 @@
     bottom: 0;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
-    display: none;
+    backface-visibility: hidden;
+    visibility: hidden;
 }
 
 .is-active.modal {
-    display: block;
+    visibility: visible;
+
+    .modal__dialog {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
 
 /**
@@ -23,16 +29,12 @@
  */
 
 .modal__dialog {
-    background-color: color(neutral, white);
-    margin-left: auto;
-    margin-right: auto;
+    // background-color: color(neutral, white);
+    margin-top: 5em;
     position: relative;
-
-    @include breakpoint(screen(sm)) {
-        max-width: 50em;
-        width: 90%;
-        margin: 5em auto;
-    }
+    opacity: 0;
+    transform: translateY(20%);
+    transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9);
 }
 
 .modal--sm .modal__dialog {
@@ -53,4 +55,33 @@
     top: spacing();
     right: spacing(lg);
     z-index: $z-1;
+    font-size: $font-size-lg;
+    color: color(brand, steel);
+    fill: color(brand, steel);
+    transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9);
+    opacity: 0;
+    visibility: hidden;
+    &:hover {
+        cursor: pointer;
+    }
+}
+.is-active .modal__close {
+    opacity: 1;
+    visibility: visible;
+}
+
+
+.modal__nav {
+    font-size: $font-size-lg;
+    a {
+        border-left: 0 solid color(brand, aqua);
+        padding-left: spacing(lg) !important;
+        transform: translateX(0%);
+        transition: all 0.3s cubic-bezier(0.25, 0.5, 0.5, 0.9);
+        &:hover {
+            border-left-width: spacing();
+            // text-decoration: underline;
+            // transform: translateX(10px);
+        }
+    }
 }
