--- a/src/scss/utility/_toggle.scss
+++ b/src/scss/utility/_toggle.scss
@@ -80,14 +80,14 @@
  */
 
 [data-cc-toggle-action] {
-    cursor: pointer;
+    // cursor: pointer;
 
     &,
     * {
         -webkit-touch-callout: none;
     }
 
-    * {
-        cursor: auto;
-    }
+    // * {
+    //     cursor: auto;
+    // }
 }
