--- a/src/scss/component/_overlay.scss
+++ b/src/scss/component/_overlay.scss
@@ -9,9 +9,10 @@
     left: 0;
     bottom: 0;
     right: 0;
-    background-color: rgba(0,0,0,0.7);
-    display: none;
-    cursor: pointer;
+    background-color: transparentize(color(brand, gold), 0.03);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
 }
 
 .has-active-overlay {
@@ -19,5 +20,6 @@
 }
 
 .is-active.overlay {
-    display: block;
+    opacity: 1;
+    visibility: visible;
 }
