Progress on lev.

--- a/src/scss/component/_card.scss
+++ b/src/scss/component/_card.scss
@@ -42,31 +42,38 @@ a%card {
 }
 
 
+$card-inline-bp: 707px;
 .card--inline {
     display: flex;
+    flex-wrap: wrap;
     overflow: hidden;
-    align-items: center;
 
-        .card__header {
-            border-bottom: 0;
-            border-right: seperator(base, width) seperator(base, style) seperator(base, color);
+    .card__header {
+        flex: 0 1 120px;
+        border-bottom: 0;
+        border-right: seperator(base, width) seperator(base, style) seperator(base, color);
+    }
+    
+
+    .card__body {
+        flex: 1 1 400px;
+        
+    }
+    .card__footer {
+        flex: 1 0 142px;
+
+        @include breakpoint($card-inline-bp) {
+            flex-grow: 0;
+            border-top: 0;
+            border-left: seperator(base, width) seperator(base, style) seperator(base, color);
         }
+    }
 
-    //@include breakpoint(max-width screen(sm, max)) {
-        flex-wrap: wrap;
-
-        .card__body {
-            flex: 1;
-            
-        }
+    @include breakpoint($card-inline-bp) {
+        .card__header,
         .card__footer {
-            width: 100%;
+            display: flex;
+            align-items: center;
         }
-    //}
-    // @include breakpoint(screen(md)) {
-    //     .card__footer {
-    //         border-top: 0;
-    //         border-left: seperator(base, width) seperator(base, style) seperator(base, color);
-    //     }
-    // }
+    }
 }
